# zero-step-ml

./: .gitignore  Makefile  README.md  pyproject.toml
zero_step_ml/src/: main.py  training.py
zero_step_ml/src/prompts/: analyse_ml_metrics.txt  analyse_schema.txt
zero_step_ml/tests/: AutoInsurSweden.csv  README.md  pima-indians-diabetes.csv  test_analyse_ml_metrics.py  test_analyse_schema.py  test_unseen_datasets.py
