[tool.poetry]
name = "zero-step-ml"
version = "0.1.0"
description = ""
authors = ["Zachary <zachary.smith@datatonic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.285"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
openai = "^0.28.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
